.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Payroll_Control_Panel__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for Government RTI Gateway and for payroll batch sizes</description>
    <fields>
        <fullName>xcdhcm__Authentication_method__c</fullName>
        <description>Please set Clear text for Test Server and MD5 for Live server.</description>
        <inlineHelpText>Please set Clear text for Test Server and MD5 for Live server.</inlineHelpText>
        <label>Authentication method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Benefit_type__c</fullName>
        <label>Benefit type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Developers_name__c</fullName>
        <label>xDevelopers name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Dps_auth_url__c</fullName>
        <label>Dps auth url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Dps_retrive_url__c</fullName>
        <label>Dps retrive url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Endpoint_url__c</fullName>
        <label>Endpoint url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Heroku_url__c</fullName>
        <label>Heroku url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xcdhcm__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Paperpayslip_batch_size__c</fullName>
        <label>Paperpayslip_batch_size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Password__c</fullName>
        <label>xPassword</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Payroll_run_batch_size__c</fullName>
        <defaultValue>200</defaultValue>
        <inlineHelpText>Enter the number of employees to be included in a batch.</inlineHelpText>
        <label>Pay run batch size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Product_name__c</fullName>
        <label>Product name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__RTI_batch_size__c</fullName>
        <description>Enter no of employee to be included in batch for generating XML file.</description>
        <inlineHelpText>Enter no of employee to be included in batch for generating XML file.</inlineHelpText>
        <label>RTI batch size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Vendor_id__c</fullName>
        <label>Vendor id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Version__c</fullName>
        <label>Version</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__gatewayTestMode__c</fullName>
        <description>This is used for RTI .</description>
        <label>gatewayTestMode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Payroll Control Panel</label>
</CustomObject>